--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ ipdb==0.13.7
 cyglfw3==3.1.0.2
 pyassimp==3.3
 progressbar==2.5
-open3d-python==0.5.0.0
+open3d==0.8.0
 tensorboardX==1.2
+transforms3d==0.3.1
 cffi==1.11.5
+icecream==2.1.2
